[package]
name = "smuc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
log = { version = "0.4", features = ["release_max_level_info"] }
regex = "1.3"
bytemuck = { version ="1.7", features = ["extern_crate_std", "derive", "min_const_generics"] }
static_assertions = "1.1"
anyhow = "1.0.52"
