[package]
name = "smuc_rs"
version = "0.1.0"
edition = "2021"
authors = ["LeagueRaINi", "Wildbook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytemuck = { version ="1.7", features = ["extern_crate_std", "derive", "min_const_generics"] }
clap = { version = "3.0.5", default-features = false, features = ["std", "derive"] }
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4"
regex = "1.3"
static_assertions = "1.1"
